# memo-mate

./: .gitignore  Cargo.toml  README.md  notifications.memo
src/: lib.rs  main.rs  notification.rs  notifications.memo  rustfmt.toml
