[package]
name = "memo-mate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.16"
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["process", "signal"] }
notify-rust = "4.10.0"
